Added a function to load the MeSH descriptors into an igraph tree.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,4 +15,5 @@ export(listDrugAnnotations)
 export(listNodes)
 export(listRelatedDrugs)
 export(loadDefaultModel)
+export(loadMeshTree)
 export(viewModel)
