Updated the NAMESPACE.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(ALL_KINDS)
 export(DISEASE_KIND)
 export(DOSE_FORM_KIND)
 export(DRUG_KIND)
+export(Frequencies)
 export(INGREDIENT_KIND)
 export(MECHANISM_OF_ACTION_KIND)
 export(PHARMACOKINETICS_KIND)
