Updated the documentation.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,4 +17,5 @@ export(listNodes)
 export(listRelatedDrugs)
 export(loadDefaultModel)
 export(loadMeshTree)
+export(loadRxNormMapping)
 export(viewModel)
