Added Shyh-Huei's Jaccard similarity functions.
Exporting the getKindSubmodel function now.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,12 +6,14 @@ export(DOSE_FORM_KIND)
 export(DRUG_KIND)
 export(Frequencies)
 export(INGREDIENT_KIND)
+export(Jaccard.F)
 export(MECHANISM_OF_ACTION_KIND)
 export(PHARMACOKINETICS_KIND)
 export(PHYSIOLOGIC_EFFECT_KIND)
 export(Similarity)
 export(THERAPEUTIC_CATEGORY_KIND)
 export(getDataSubmodel)
+export(getKindsSubmodel)
 export(listDrugAnnotations)
 export(listNodes)
 export(listRelatedDrugs)
