Added a new lookup function that exposes more of the underlying find_nodes function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(getKindsSubmodel)
 export(listDrugAnnotations)
 export(listNodes)
 export(listRelatedDrugs)
+export(listRelatedNodes)
 export(loadDefaultModel)
 export(loadMeshTree)
 export(loadRxNormMapping)
